<resources>
    <string name="app_name">FeatureMeasurement</string>
    <string name="navigation_list_measurement">Měření</string>
    <string name="navigation_add_edit_measurement">{action} skupinu měření</string>
    <string name="add_measurement_group">Přidat skupinu měření</string>
    <string name="field_measurement_group_field_name">Jméno pole</string>
    <string name="description_unit_group">Typ jednotek</string>
    <string name="description_minimal_value">Minimální hodnota</string>
    <string name="field_minimal_value">Minimální hodnota</string>
    <string name="field_maximal_value">Maximální hodnota</string>
    <string name="description_maximal_value">Maximální hodnota</string>
    <string name="field_measurement_group_name">Jméno skupiny měření</string>
    <string name="success_measurement_group_saved">Skupina měření byla uložena!</string>
    <string name="notification_measurement_group_title">Upozornění na měření</string>
    <string name="notification_measurement_group_text">Je čas si zapsat měření \"%s\" (%s)</string>
    <string name="error_cannot_schedule_measurement_group">Skupina měření byla uložena. Nepodařilo se však naplánovat notifikace.</string>
    <string name="next_schedule_label_measurement">Další měření</string>
    <string name="next_schedule_multiple_measurement">Více měření</string>
    <string name="next_schedule_no_measurement">Nemáte naplánováno žádné měření</string>
    <string name="fragment_measurement_group">Skupiny měření</string>
    <string name="fragment_timeline">Itinerář</string>
    <string name="frequency_everyday">Každý den</string>
    <string name="dialog_delete_measurement_group_title">Smazat skupinu měření</string>
    <string name="dialog_delete_measurement_group_message">Opravdu si přejete smazat tuto skupinu měření? Tato akce smaže všechny záznamy v této skupině!</string>
    <string name="no_measurement_group">Nemáte žádnou skupinu měření</string>
    <string name="action_make_entry">Zapsat</string>
    <string name="field_error_value_range">Hodnota musí být v rozsahu %s a %s (včetně)</string>
    <string name="field_error_value_minimal">Hodnota musí být menší než %s (včetně)</string>
    <string name="field_error_value_maximal">Hodnota musí být větší než %s (včetně)</string>
    <string name="field_error_unknown">Neznámá chyba</string>
    <string name="field_entry_time">Čas zápisu</string>
    <string name="field_entry_date">Datum zápisu</string>
    <string name="end_icon_entry_date">Otevřít dialogové okno pro výběr data</string>
    <string name="end_icon_entry_time">Otevřít dialogové okno pro výběr času</string>
    <string name="navigation_detail_measurement_group">{name}</string>
    <string name="minimal_label">Minimální hodnota</string>
    <string name="minimal_value">%s %s (%s)</string>
    <string name="maximal_label">Maximální hodnota</string>
    <string name="maximal_value">%s %s (%s)</string>
    <string name="week_average">7denní průměr</string>
    <string name="entry_count_label">Celkem záznamů</string>
    <string name="navigation_add_edit_entry">{action} zápis měření</string>
    <string name="save_measurement_entry">Uložit zápis měření</string>
    <string name="action_add_measurement">Přidat záznam</string>
    <string name="dialog_delete_entry_title">Smazat záznam měření</string>
    <string name="dialog_delete_entry_message">Opravdu si přejete smazat záznam měření</string>
    <string name="description_problem_category">Kategorie problémů</string>
    <string name="field_problem_category">Kategorie problému</string>
    <string name="no_next_schedule_error">Neexistuje žádné budoucí měření</string>
    <string name="measurement_problem_category_detail_title">Měření</string>
    <string name="measurement_problem_category_detail_description">Skupiny měření přiřazené k této kategorii</string>
    <string name="last_entry_label">Poslední měření</string>
    <string name="measurement_field_info">%s (%s)</string>
    <string name="detail_measurement_group_no_entries">Žádné záznamy</string>
    <string name="detail_measurement_group_add_entry">Přidat záznam</string>
    <string name="detail_measurement_group_export">Exportovat</string>
</resources>
