<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseFrontBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@color/box_background_light"
    android:backgroundTint="@color/box_background_light"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="Hmotnost" />

    <com.patrykandpatrick.vico.views.cartesian.CartesianChartView
        android:id="@+id/chart_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        app:lineLayerStyle="@style/ChartLineLayerStyle"
        app:showBottomAxis="true"
        app:layers="line"
        app:showStartAxis="true"/>

    <TableLayout
        android:id="@+id/table_heading_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_entry_count_label"
                style="@style/table_row_item"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:textStyle="bold"
                android:text="@string/entry_count_label"
                android:layout_margin="1dp"/>

            <TextView
                android:id="@+id/text_view_entry_count_value"
                style="@style/table_row_item"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_margin="1dp"
                tools:text="38"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_minimum_label"
                style="@style/table_row_item"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:textStyle="bold"
                android:text="@string/minimal_label"
                android:layout_margin="1dp"/>

            <TextView
                android:id="@+id/text_view_minimum_value"
                style="@style/table_row_item"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:text="@string/minimal_value"
                tools:text="80 mmHg (20. září 2023)"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_maximum_label"
                style="@style/table_row_item"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:textStyle="bold"
                android:text="@string/maximal_label"
                android:layout_margin="1dp"/>

            <TextView
                android:id="@+id/text_view_maximum_value"
                style="@style/table_row_item"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:text="@string/maximal_value"
                tools:text="150 mmHg (20. září 2023)"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_week_average_label"
                style="@style/table_row_item"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:textStyle="bold"
                android:text="@string/week_average"
                android:layout_margin="1dp"/>

            <TextView
                android:id="@+id/text_view_week_average_value"
                style="@style/table_row_item"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:text="@string/maximal_value"
                tools:text="150 mmHg (20. září 2023)"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
